[package]
name = "reMousable"
version = "0.1.0"
authors = ["simon <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
websocket = "0.26.2"
confy = "0.4.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"

[dependencies.iced]
#git = "https://github.com/hecrj/iced.git"
#features = ["glow"]
version = "0.1.1"
